--- a/app/src/main/res/layout/vacancies_fragment.xml
+++ b/app/src/main/res/layout/vacancies_fragment.xml
@@ -6,8 +6,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.vacancies.VacanciesFragment"
-    android:background="@drawable/search_background"
+    tools:context=".ui.vacancies.VacanciesFragment"
+    android:background="@drawable/base_background"
     >
 
     <androidx.recyclerview.widget.RecyclerView
