--- a/app/src/main/res/color/chip_background_selector.xml
+++ b/app/src/main/res/color/chip_background_selector.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:alpha="0.5"
+        android:alpha="1"
         android:color="@color/colorViewBackground"
         android:state_enabled="true"
         android:state_checked="false"
         />
     <item
         android:alpha="1"
-        android:color="@color/colorViewBackground"
+        android:color="@color/red_double_light"
         android:state_checked="true"
         android:state_enabled="true"
         />
