--- a/app/src/main/res/drawable/spinner_ring.xml
+++ b/app/src/main/res/drawable/spinner_ring.xml
@@ -13,10 +13,10 @@
             android:width="24dp" />
 
         <gradient
-            android:centerColor="#886688cc"
             android:centerY="0.50"
-            android:endColor="#ff6688cc"
-            android:startColor="#006688cc"
+            android:startColor="#00ff4444"
+            android:centerColor="#88ff4444"
+            android:endColor="@color/red_light"
             android:type="sweep"
             android:useLevel="false" />
     </shape>
