--- a/app/src/main/res/layout/default_load_state.xml
+++ b/app/src/main/res/layout/default_load_state.xml
@@ -37,7 +37,7 @@
         android:text="@string/oops"
         android:textStyle="bold|italic"
         android:textSize="18sp"
-        android:textColor="@color/teal_200"
+        android:textColor="@color/red_light"
 
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
