--- a/app/src/main/res/layout/fragment_employer.xml
+++ b/app/src/main/res/layout/fragment_employer.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/search_background"
-    tools:context=".fragments.employer.EmployerFragment">
+    android:background="@drawable/base_background"
+    tools:context=".ui.employer.EmployerFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -36,7 +36,7 @@
 
                 app:layout_constraintTop_toTopOf="parent"
                 tools:background="#32000000"
-                />
+                tools:ignore="ContentDescription" />
 
             <TextView
                 android:id="@+id/nameTextView"
@@ -179,7 +179,6 @@
         android:orientation="vertical"
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="72dp"
-        tools:visibility="invisible"
     >
 
         <ProgressBar
@@ -197,7 +196,7 @@
             android:text="@string/please_wait"
             android:textStyle="bold|italic"
             android:textSize="18sp"
-            android:textColor="@color/teal_200"
+            android:textColor="@color/red_light"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
         />
@@ -220,7 +219,7 @@
             android:layout_height="wrap_content"
             android:textStyle="bold|italic"
             android:textSize="18sp"
-            android:textColor="@color/teal_200"
+            android:textColor="@color/red_light"
             android:layout_margin="8dp"
             tools:text="Error Error Error Error Error Error Error Error Error Error "
         />
