--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,12 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/search_background"
-    tools:context=".fragments.search.SearchFragment">
+    android:background="@drawable/base_background"
+    tools:context=".ui.search.SearchFragment">
+
+    <com.google.android.material.textview.MaterialTextView
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:text="hh.ru"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="14dp"
+        android:background="@drawable/hh_bg"
+        android:gravity="center"
+        android:elevation="32dp"
+        android:shadowColor="@color/black"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        tools:ignore="HardcodedText,SpUsage" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/search"
+        android:textColor="@color/white"
+        android:textStyle="bold|italic"
+        android:textSize="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="104dp"
+        tools:ignore="SpUsage" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,7 +47,8 @@
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/TextInputLayoutStyle"
                 android:hint="@string/find"
-                android:layout_margin="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 >
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -33,7 +62,9 @@
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/TextInputLayoutStyle"
                 android:hint="@string/Exclude"
-                android:layout_margin="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="24dp"
                 >
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -46,9 +77,12 @@
 
                 <com.google.android.material.chip.ChipGroup
                     android:id="@+id/searchFieldChipGroup"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp">
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="24dp"
+                    >
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/nameFieldSearchChip"
@@ -76,7 +110,9 @@
                 style="@style/TextInputLayoutStyle"
                 android:hint="@string/region"
                 app:helperText="@string/first_symbols"
-                android:layout_margin="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="24dp"
                 >
 
                 <AutoCompleteTextView
@@ -84,22 +120,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionDone"
-                    />
+                    tools:ignore="LabelFor" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="24dp"
                 android:text="@string/experience"
-                android:background="@color/colorViewBackground"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textColor="@color/colorViewBackground"
+                android:textSize="22dp"
+                android:textStyle="bold|italic"
+                tools:ignore="SpUsage" />
 
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/ExperienceChipGroup"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
@@ -145,9 +182,10 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="@string/work_schedule"
-                android:background="@color/colorViewBackground"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textColor="@color/colorViewBackground"
+                android:textSize="22dp"
+                android:textStyle="bold|italic"
+                tools:ignore="SpUsage" />
 
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/scheduleChipGroup"
@@ -196,15 +234,17 @@
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/TextInputLayoutStyle"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:maxEms="3"
                 android:hint="@string/period"
                 app:helperText="@string/numbers_of_days"
-                android:layout_margin="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="24dp"
                 >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/periodEditText"
-                    android:layout_width="match_parent"
+                    android:layout_width="144dp"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionNext"
                     android:inputType="number"
@@ -239,5 +279,5 @@
         android:layout_marginBottom="16dp"
         android:elevation="8dp"
         android:src="@drawable/ic_search"
-        />
+        tools:ignore="ContentDescription" />
 </FrameLayout>
