--- a/app/src/main/res/layout/vacancy_fragment.xml
+++ b/app/src/main/res/layout/vacancy_fragment.xml
@@ -5,9 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.vacancy.VacancyFragment"
-
-    android:background="@drawable/search_background"
+    android:background="@drawable/base_background"
+    tools:context=".ui.vacancy.VacancyFragment"
     >
 
         <ScrollView
@@ -178,7 +177,7 @@
             android:text="@string/please_wait"
             android:textStyle="bold|italic"
             android:textSize="18sp"
-            android:textColor="@color/teal_200"
+            android:textColor="@color/red_light"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
         />
@@ -201,7 +200,7 @@
             android:layout_height="wrap_content"
             android:textStyle="bold|italic"
             android:textSize="18sp"
-            android:textColor="@color/teal_200"
+            android:textColor="@color/red_light"
             android:layout_margin="8dp"
             tools:text="Error Error Error Error Error Error Error Error Error Error "
         />
