--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorViewBackground">#BCFFFF00</color>
+    <color name="colorViewBackground">#FFFFFFFF</color>
+    <color name="red">#FF0000</color>
+    <color name="red_light">#ffff4444</color>
+    <color name="red_double_light">#FF8080</color>
 </resources>
+
+    <!--    <color name="colorViewBackground">#BCFFFF00</color>-->
