--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,11 +2,13 @@
     <!-- Base application theme. -->
     <style name="Theme.HHCustomBasis" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#E91EE6</item>
+<!--        <item name="colorPrimary">#E91EE6</item>-->
+        <item name="colorPrimary">@color/red_light</item>
         <item name="colorPrimaryVariant">#E91E5E</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+<!--        <item name="colorSecondary">@color/teal_200</item>-->
+        <item name="colorSecondary">@color/red_light</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         
